--- a/edc-gear-starter/react-app/src/components/PostDetail/PostDetail.css
+++ b/edc-gear-starter/react-app/src/components/PostDetail/PostDetail.css
@@ -178,9 +178,11 @@ textarea.post-detail-textarea {
 
 
  #each-comment-content-inner {
-    max-width: 300px;
+    max-width: 290px;
     padding: 0 14px 5px 14px;
     padding-bottom: 0;
+    display: inline;
+    
 }
 
  #each-comment-content-inner > * {
@@ -195,6 +197,8 @@ textarea.post-detail-textarea {
     font-size: 14px;
     padding-left: 5px;
     margin: 0;
+    overflow-wrap: break-word;
+    display: inline;
 }
 
 .username-p-top {
